--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 * {
-   margin: 0px;
-   padding: 0px;
+  margin: 0;
 }
 
 html,
@@ -26,66 +25,66 @@ main {
 }
 
 .container {
-    max-width: 250px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
+  max-width: 250px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 
-    color: var(--grey);
+  color: var(--grey);
 }
 
 .avatar {
-    width: 10rem;
-    margin: 11.5rem auto 0;
+  width: 10rem;
+  margin: 11.5rem auto 0;
 
-    position: relative;
+  position: relative;
 }
 
 .avatar span {
-    position: absolute;
-    top: -15px;
-    z-index: 1;
+  position: absolute;
+  top: -15px;
+  z-index: 1;
 }
 
 .avatar > img {
-    width: 10rem;
-    height: 11.5rem;
-    object-fit: cover;
+  width: 10rem;
+  height: 11.5rem;
+  object-fit: cover;
 
-    clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
+  clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
 }
 
-
 h1 {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
 
-    margin-top: 1.5rem;
+  margin-top: 1.5rem;
 }
 
 a {
-    color: var(--grey);
-    text-decoration: none;
+  color: var(--grey);
+  text-decoration: none;
 
-    margin-top: 0.25rem;
-    display: flex;
-    gap: 0.75rem;
+  margin-top: 0.25rem;
 
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  gap: 0.75rem;
+
+  justify-content: center;
+  align-items: center;
 }
 
 p {
-    margin-top: 2rem;
+  margin-top: 2rem;
 }
 
 ul {
-    margin-top: 4rem;
+  margin-top: 4rem;
 
-    list-style: none;
-    padding: 0;
+  list-style: none;
+  padding: 0;
 
-    display: flex;
-    gap: 0.5rem;
+  display: flex;
+  gap: 0.5rem;
 
-    justify-content: center;
+  justify-content: center;
 }
