--- a/style.css
+++ b/style.css
@@ -9,14 +9,14 @@ body {
   -webkit-font-smoothing: antialiased;
   background: #31343b;
 }
-
+/*
 body {
   --black: hsl(240, 6%, 13%);
   --grey: hsl(240, 9%, 89%);
 
   display: grid;
   place-items: center;
-}
+}*/
 
 main {
   background: url("../images/background.svg");
