--- a/style.css
+++ b/style.css
@@ -4,24 +4,23 @@
 
 html,
 body {
-  height: 100%;
-  font-family: "Roboto", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  background: #31343b;
-}
-/*
-body {
-  --black: hsl(240, 6%, 13%);
   --grey: hsl(240, 9%, 89%);
+  height: 100%;
 
+  font-family: 'Roboto', sans-serif;
+  -webkit-font-smoothing: antialiased;
+}
+
+body {
   display: grid;
   place-items: center;
-}*/
+}
 
 main {
-  background: url("../images/background.svg");
-  width: 375px;
-  height: 812px;
+  background: url(images/background.svg) no-repeat center/cover;
+  width: 100vw;
+  min-height: 812px;
+  height: 100vh;
 }
 
 .container {
