--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 main {
-  background: url(../images/background.svg) no-repeat center/cover;
+  background: url(images/background.svg) no-repeat center/cover;
   width: 100vw;
   min-height: 812px;
   height: 100vh;
@@ -27,15 +27,14 @@ main {
   max-width: 250px;
   margin-left: auto;
   margin-right: auto;
-  text-align: center;
 
+  text-align: center;
   color: var(--grey);
 }
 
 .avatar {
   width: 10rem;
   margin: 11.5rem auto 0;
-
   position: relative;
 }
 
@@ -43,47 +42,41 @@ main {
   position: absolute;
   top: -15px;
   z-index: 1;
+  animation: rotated 10s linear infinite;
 }
 
 .avatar > img {
   width: 10rem;
   height: 11.5rem;
-  object-fit: cover;
 
+  object-fit: cover;
   clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
 }
 
 h1 {
   font-size: 1.5rem;
-
   margin-top: 1.5rem;
 }
 
-a {
-  color: var(--grey);
-  text-decoration: none;
-
-  margin-top: 0.25rem;
-
-  display: flex;
-  gap: 0.75rem;
-
-  justify-content: center;
-  align-items: center;
-}
-
 p {
-  margin-top: 2rem;
+  margin-top: 1.5rem;
 }
 
 ul {
-  margin-top: 4rem;
-
+  margin-top: 3rem;
   list-style: none;
   padding: 0;
 
   display: flex;
   gap: 0.5rem;
-
   justify-content: center;
+}
+
+li a {
+  transition: 0.3s;
+  display: inline-block;
+}
+
+li a:hover {
+  transform: translateY(-10px);
 }
