--- a/style.css
+++ b/style.css
@@ -4,14 +4,9 @@
 
 html,
 body {
+  --black: hsl(240, 6%, 13%);
   --grey: hsl(240, 9%, 89%);
-  height: 100%;
 
-  font-family: 'Roboto', sans-serif;
-  -webkit-font-smoothing: antialiased;
-}
-
-body {
   display: grid;
   place-items: center;
 }
