--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@
 
 html,
 body {
+  height: 100%;
+  font-family: "Roboto", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  background: #31343b;
+}
+
+body {
   --black: hsl(240, 6%, 13%);
   --grey: hsl(240, 9%, 89%);
 
