--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html,
 body {
   height: 100%;
   font-family: "Roboto", sans-serif;
-  background: #31343b;
+  background: url("images/background.svg");
 }
 
 body {
