--- a/style.css
+++ b/style.css
@@ -4,21 +4,20 @@
 
 html,
 body {
+  --grey: hsl(240, 9%, 89%);
   height: 100%;
-  font-family: "Roboto", sans-serif;
-  background: url("images/background.svg");
+
+  font-family: 'Roboto', sans-serif;
+  -webkit-font-smoothing: antialiased;
 }
 
 body {
-  --black: hsl(240, 6%, 13%);
-  --grey: hsl(240, 9%, 89%);
-
   display: grid;
   place-items: center;
 }
 
 main {
-  background: url("images/background.svg");
+  background: url(images/background.svg) no-repeat center/cover;
   width: 375px;
   height: 812px;
 }
