--- a/style.css
+++ b/style.css
@@ -18,8 +18,9 @@ body {
 
 main {
   background: url(images/background.svg) no-repeat center/cover;
-  width: 375px;
-  height: 812px;
+  width: 100vw;
+  min-height: 812px;
+  height: 100vh;
 }
 
 .container {
