--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
 
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
+  background: url(images/background-desktop.svg);
 }
 
 body {
