--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 main {
-  background: url(images/background.svg) no-repeat center/cover;
+  background: url(images/background.svg);
   width: 100vw;
   min-height: 812px;
   height: 100vh;
@@ -88,17 +88,9 @@ ul {
   justify-content: center;
 }
 
-@media (min-width: 620px) {
+@media (min-width: 720px) {
   main {
-    background: url(images/background-desktop.svg) no-repeat center/cover;
-    min-height: 600px;
-  }
-
-  p {
-    margin-top: 1rem;
-  }
-
-  ul {
-    margin-top: 1.5rem;
+    background: url(images/background-desktop.svg);
+    min-height: 700px;
   }
 }
