--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 main {
-  background: url(images/background.svg);
+  background: url(images/background.svg) no-repeat center/cover;
   width: 100vw;
   min-height: 812px;
   height: 100vh;
@@ -88,9 +88,17 @@ ul {
   justify-content: center;
 }
 
-@media (min-width: 720px) {
+@media (min-width: 1020px) {
   main {
-    background: url(images/background-desktop.svg);
-    min-height: 700px;
+    background: url(images/background-desktop.svg) no-repeat center/cover;
+    min-height: 1000px;
+  }
+  
+  p {
+    margin-top: 1rem;
+  }
+
+  ul {
+    margin-top: 1.5rem;
   }
 }
